collapse issue solved

--- a/src/app/pages/home/de/de.component.css
+++ b/src/app/pages/home/de/de.component.css
@@ -115,3 +115,6 @@ tbody td[rowspan] {
     width: 105%;
 }
 
+.table>tbody+tbody {
+    border-top: 0px solid #ddd;
+}
